improve code by adding by adding background color

--- a/class-1/index.html
+++ b/class-1/index.html
@@ -9,7 +9,21 @@
 <body>
     <header>
         <h1>Ore's Website</h1>
+        <button>contact me</button>
     </header>
-    
+
+    <main>
+        <aside>
+
+        </aside>
+
+        <section id="contact">
+
+        </section>
+    </main>
+
+    <footer>
+        <p>Designed by: oreo - &copy; 2023.</p>
+    </footer>
 </body>
 </html>
