--- a/class-1/index.html
+++ b/class-1/index.html
@@ -15,12 +15,11 @@ body {
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-color:#03071E;
   padding: 30px;
   text-align: center;
   font-size: 35px;
-  color: black;
-  ;
+  color: white
 }
 
 /* Create two columns/boxes that floats next to each other */
@@ -28,8 +27,13 @@ nav {
   float: left;
   width: 30%;
   height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
+  background-color:#6A040F;
+  color: black;
   padding: 20px;
+}
+
+nav a {
+  color: white;
 }
 
 /* Style the list inside the menu */
@@ -42,7 +46,8 @@ article {
   float: left;
   padding: 20px;
   width: 70%;
-  background-color: #7c1b30;
+  background: #f3dfa2 ;
+  color: black;
   height: 300px; /* only for demonstration, should be removed */
 }
 
@@ -55,10 +60,10 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #777;
+  background-color: #03071E;
   padding: 10px;
   text-align: center;
-  color:aqua;
+  color: white;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -73,27 +78,27 @@ footer {
 <body>
 
 <header>
-  <h2>Cities</h2>
+  <h2>Oreo's Website</h2>
 </header>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">London</a></li>
+      <li><a href="#">Netball</a></li>
       <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li><a href="#">Newest Iphone</a></li>
     </ul>
   </nav>
   
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h1>About Me</h1>
+    <p></p>
+    <p>Things about myself</p>My name is  Ore but people like to call me Oreo the great.I am sporty and smart. I love Kfc and I dislike school. It also gives me joy to annoy deolu aka addy.
   </article>
 </section>
 
 <footer>
-  <p>Footer</p>
+  <p>Ore &copy; 2024</p>
 </footer>
 
 </body>
